# multiLevelSgx

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  setup_dependencies.sh
cmake/: FindSGX.cmake
frontend/: README.md  start-frontend.sh
frontend/bm-search-app/: README.md  package-lock.json  package.json
frontend/bm-search-app/src/: App.tsx
frontend/bm-search-app/src/components/: BMPlusTester.tsx  BMTester.tsx
frontend/bm-search-app/src/services/: api.ts
frontend/bm-search-app/src/utils/: testUtils.ts
include/: simple_json.hpp
include/core/: authorized_user.h  bm_scheme.h  bm_scheme_plus.h  cache_controller.h  cluster.h  data_owner.h  edb_controller.h  padding_dataset.h  token_generator.h
include/enclave/: crypto_sgx.h  enclave_dataset_loader.h  enclave_edb_controller.h  sgx_serializer.h
include/server/: bm_server.h  bm_server_plus.h  edb_server.h  token_server.h
include/test/: test_bm.h  test_bm_plus.h
include/utils/: constants.h  crypto.h  dataset_loader.h  timer.h  types.h
src/: App.cpp  main.cpp
src/core/: authorized_user.cpp  bm_scheme.cpp  bm_scheme_plus.cpp  data_owner.cpp  edb_controller.cpp  token_generator.cpp
src/enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave_private.pem  crypto_sgx.cpp  enclave_dataset_loader.cpp  enclave_edb_controller.cpp  sgx_serializer.cpp
src/server/: bm_server.cpp  bm_server_main.cpp  bm_server_plus.cpp  bm_server_plus_main.cpp  edb_server.cpp  token_server.cpp
src/test/: test_bm.cpp  test_bm_plus.cpp
src/utils/: crypto.cpp  timer.cpp
test/: test_authorized_user.cpp  test_cloud_server.cpp  test_crypto.cpp  test_data_owner.cpp  test_sgx_enclave.cpp
tools/dataset/: README.md  process_enron.py  process_wiki.py  requirements.txt
